kubernetes/goviolin/live/live.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goviolin
---
apiVersion: v1
kind: Service
metadata:
  name: goviolin
  namespace: goviolin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: goviolin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goviolin
  namespace: goviolin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goviolin
  template:
    metadata:
      labels:
        app: goviolin
    spec:
      containers:
      - image: ziadmmh/goviolin:v0.0.1
        name: goviolin
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01-production-cluster-issuer-public
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - GoViolin
    nginx.ingress.kubernetes.io/auth-secret: goviolin-external-ingress-passwd-gkfcg2cgtc
    nginx.ingress.kubernetes.io/auth-type: basic
  name: goviolin
  namespace: goviolin
spec:
  ingressClassName: external-nginx
  rules:
  - host: goviolin.k8s.sreboy.com
    http:
      paths:
      - backend:
          service:
            name: goviolin
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - goviolin.k8s.sreboy.com
    secretName: goviolin-k8s-sreboy-com-key-pair
